# eProject

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.cmake/: Version.h.in  git-version.cmake
Firmware/: CMakeLists.txt
Firmware/Applications/: CMakeLists.txt
Firmware/Applications/Sample/: CMakeLists.txt  main.c
scripts/: build.sh
